sync only website files

--- a/site/resume.html
+++ b/site/resume.html
@@ -63,16 +63,15 @@
     <h2>Experience</h2>
       <h3>Full Time Occupations</h3>
       <ul>
-        <li>2023-present: Cryptomathic A/S (1 month)</li>
-        <li>2022-2023: Mandaring Language Education (4 months)</li>
-        <li>2019-2022: QIAGEN Aarhus A/S (44 months)</li>
-        <li>2018-2019: Backpacking (5 months)</li>
-        <li>2017-2018: Systematic A/S (12 months)</li>
+        <li>April 2023-present: Cryptomathic A/S</li>
+        <li>2023Q1: Mandaring Language Education</li>
+        <li>2019-2022: QIAGEN Aarhus A/S</li>
+        <li>2017-2019: Systematic A/S</li>
       </ul>
       <h3>Part Time</h3>
       <ul>
-        <li>2019: Dronaar (1 month)</li>
-        <li>2016-2017: Magnatek ApS (8? months)</li>
+        <li>2019: Startup Dronaar (Briefly)</li>
+        <li>2016-2017: Magnatek ApS</li>
       </ul>
   </section>
   
