--- a/site/contact.html
+++ b/site/contact.html
@@ -32,9 +32,9 @@
         <h1>Contact Me</h1>
         <div class="contact-info">
           <p><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:paspaaverden@gmail.com"> Email</a></p>
-          <p><i class="fa fa-phone"></i><a href="tel:+4523385488" style="color:black;"> Phone (Denmark)</a></p>
-          
       <p>
+        <a href="https://line.me/ti/p/w0KADBV1HQ">
+        <i class="fab fa-line"> Line</i></a>
         <a href="https://t.me/martin_bh" target="_blank">
           <i class="fab fa-telegram"> Telegram</i></a>
           
