--- a/site/contact.html
+++ b/site/contact.html
@@ -18,6 +18,7 @@
   </ul>
   </nav>
 
+  <div class="container">
 
   <header>
     <h1 class="hamburger" onclick="toggleNav()">&#9776; Menu </h1>
@@ -50,10 +51,13 @@
         </div>
       </div>
     </section>
+    
+    
   </main>
   
   <footer>
     <p>Copyright &copy; Martin Bjerrum Henriksen 2023</p>
   </footer>
+  </div>
   </body>
 </html>
