--- a/site/resume.html
+++ b/site/resume.html
@@ -24,7 +24,7 @@
   </header>
   
   <main>
-    <h2 style="font-family:Sans-serif">I am a Software Developer who enjoys making Build Pipelines and other Infrastructure 🏗 </h2>
+    <h2 style="font-family:Sans-serif">I am a Software Developer who enjoys making Build Pipelines and other Infrastructure &#127959; </h2>
     
     
     <section id="Pdf">
