--- a/site/index.html
+++ b/site/index.html
@@ -18,25 +18,25 @@
   </ul>
   </nav>
 
-
-  <header>
-    <h1 class="hamburger" onclick="toggleNav()">&#9776; Menu </h1>
-  </header>
-
+  <div class="container"> <!--makes footer stick to bottom of the page-->
+    <header>
+      <h1 class="hamburger" onclick="toggleNav()">&#9776; Menu </h1>
+    </header>
   
-  <main>
-    <h1 align="center">
-      Welcome to my personal website!
-    </h1>
-    <p align="center">
-      &#11013;&#65039; Here are some pages to explore.
-    </p>
-  </main>
-  
-  <footer>
-    <p>Copyright &copy; Martin Bjerrum Henriksen 2023</p>
-  </footer>
-  
+    
+    <main>
+      <h1 align="center">
+        Welcome to my personal website!
+      </h1>
+      <p align="center">
+        &#11013;&#65039; Here are some pages to explore.
+      </p>
+    </main>
+    
+    <footer>
+      <p>Copyright &copy; Martin Bjerrum Henriksen 2023</p>
+    </footer>
+  </div>
     <script>
       $(document).ready(function(){
           openNav();
