--- a/site/contact.html
+++ b/site/contact.html
@@ -32,7 +32,7 @@
       <a class="pagetitle"><div class="center-container">Contact</div></a>
         <h1>Contact Me</h1>
         <div class="contact-info">
-          <p><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:paspaaverden@gmail.com"> Email</a></p>
+          <p><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:martinbh@martinbh.dev"> Email</a></p>
       <p>
         <a href="https://line.me/ti/p/w0KADBV1HQ">
         <i class="fab fa-line"> Line</i></a>
