--- a/site/resume.html
+++ b/site/resume.html
@@ -38,7 +38,7 @@
           <h2>Full Time Occupations</h2>
           <ul>
             <li>April 2023-present: Cryptomathic A/S</li>
-            <li>2023Q1: Mandaring Language Education</li>
+            <li>2023Q1: Mandarin Language Education</li>
             <li>2019-2022: QIAGEN Aarhus A/S</li>
             <li>2017-2018: Systematic A/S</li>
           </ul>
