Test hyperlinks for snowball hunt

--- a/snowballhunt.html
+++ b/snowballhunt.html
@@ -4,10 +4,10 @@
     </head>
     <body>
         <p>
-            I punctuated this poem with subtle clues<a href="nothingtoseehere.html">.</a>
+            I punctuated this poem with subtle clues<a href="snowballhunt/nothingtoseehere.html">.</a> here.html">.</a>
         </p>
         <p>
-            Try and find them (you've nothing to lose)<a href="nothingtoseehere.html">.</a>
+            Try and find them (you've nothing to lose)<a href="resume.html">.</a>
         </p>
         <p>
             Although it may take you a "period" of time<a href="nothingtoseehere.html">...</a>
