--- a/snowballhunt/treasure.html
+++ b/snowballhunt/treasure.html
@@ -1,6 +1,6 @@
 <html>
     <p>
-        Nice one! The snowballs are in the rightmost cupboard in games room &#128521;
+        Nice one! The snowballs are in the rightmost cupboard in Games Room &#128521;
     </p>
 </html>
 
