fix links and unicode

--- a/snowballhunt/clue.html
+++ b/snowballhunt/clue.html
@@ -13,7 +13,7 @@
             Although it may take you a "period" of time<a href="nothingtoseehere.html">...</a>
         </p>
         <p>
-            Because I ✝ my T's and <a href="nothingtoseehere.html">•</a> my I's<a href="nothingtoseehere.html">.</a>
+            Because I &#10013; my T's and <a href="nothingtoseehere.html">&#8226;</a> my I's<a href="nothingtoseehere.html">.</a>
         </p>
         <p>
             And if you come to a <em>full stop</em><a href="nothingtoseehere.html">.</a>
