Treasure hunt: add text to source clue

--- a/snowballhunt/nothingtoseehere.html
+++ b/snowballhunt/nothingtoseehere.html
@@ -1,8 +1,9 @@
 <html>
     <img src="85gex9.jpg">
-<!--
     <p>
-        As with Stack Overflow, the real <a href="https://martinbh.dev/snowballhunt/treasure.html">treasure</a> is in the comments.
+        I'm afraid this is not the right source of information.
     </p>
--->
+    <p>
+        As with Stack Overflow, the <!--a href="https://martinbh.dev/snowballhunt/treasure.html"-->treasure</a> is in the comments
+    </p>
 </html>
