--- a/snowballhunt/nothingtoseehere.html
+++ b/snowballhunt/nothingtoseehere.html
@@ -4,6 +4,6 @@
         I'm afraid this is not the right source of information.
     </p>
     <p>
-        As with Stack Overflow, the <!--a href="https://martinbh.dev/snowballhunt/treasure.html"-->treasure</a> is in the comments
+        As with Stack Overflow, the <!--a href="https://martinbh.dev/snowballhunt/treasure.html"-->treasure<!--/a--> is in the comments
     </p>
 </html>
