Snowballhunt: improve clues

--- a/snowballhunt/snowballhint.html
+++ b/snowballhunt/snowballhint.html
@@ -7,16 +7,16 @@
             I punctuated this poem with subtle clues<a href="nothingtoseehere.html">.</a>
         </p>
         <p>
-            Try and find them! (you've nothing to lose)<a href="nothingtoseehere.html"></a>
+            Try and find them! (you've nothing to lose)
         </p>
         <p>
-            But it may take a "period" of time<a href="nothingtoseehere.html"></a>
+            But it may take a period of time
         </p>
         <p>
-            Because I &#10013; my T's and <a href="nothingtoseehere.html">&#8226;</a> my I's<a href="nothingtoseehere.html">.</a>
+            Because I &#10013; my t's and &#8226; my i's
         </p>
         <p>
-            And if you come to a <em>full stop</em><a href="nothingtoseehere.html">...</a>
+            And if you come to a full stop<a href="nothingtoseehere.html">...</a>
         </p>
         <p>
             LMB down, LMB up<a href="nothingtoseehere.html">.</a>
