credit ascii artist

--- a/snowballhunt/treasure.html
+++ b/snowballhunt/treasure.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <p>
         Nice one! The snowballs are in the rightmost cupboard in Games Room &#128521;
@@ -6,6 +7,7 @@
 
 <!--
 
+From : Richard Kirk (rak@canon.co.uk)
                                          _.O
                                   ,-O .-"
                                .-" .-"          ..-O
