Remove copyright message

--- a/language-hacking.html
+++ b/language-hacking.html
@@ -58,7 +58,7 @@
      </section>
   </main>
   <footer>
-    <p>Copyright &copy; Martin Bjerrum Henriksen 2023</p>
+    <p>Last updated in 2023 by Martin Bjerrum Henriksen</p>
   </footer>
   </div>
 </body>
