--- a/resume.html
+++ b/resume.html
@@ -59,7 +59,7 @@
     </main>
   
     <footer>
-      <p>Copyright &copy; Martin Bjerrum Henriksen 2023</p>
+      <p>Last updated in 2023 by Martin Bjerrum Henriksen</p>
     </footer>
   </div>
 </body>
